--- a/angular-app/angular.json
+++ b/angular-app/angular.json
@@ -94,6 +94,7 @@
               "src/assets"
             ],
             "styles": [
+              "npm_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
             "scripts": []
